--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ rand = "0.8.5"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0"
 rand_chacha = "0.3"
+memmap2 = "0.9.4"
+byteorder = "1.5.0"
