--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = "1.0"
 rand_chacha = "0.3"
 memmap2 = "0.9.4"
 byteorder = "1.5.0"
+nom = "7.1.3"
 
 [lints.clippy]
 pedantic = "warn"
