--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,7 @@ rand_chacha = "0.3"
 memmap2 = "0.9.4"
 byteorder = "1.5.0"
 nom = "7.1.3"
-nix = { version = "0.29.0", features = ["time"] }
-lazy_static = "1.5.0"
+perf = { path = "./perf" }
 
 [lints.clippy]
 pedantic = "warn"
