--- a/perf/perf-attributes/Cargo.toml
+++ b/perf/perf-attributes/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "2.0", features = ["extra-traits"] }
+syn = { version = "2.0", features = ["extra-traits", "full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 perf-core = { path = "../perf-core" }
