--- a/perf/perf-attributes/Cargo.toml
+++ b/perf/perf-attributes/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [lib]
 proc-macro = true
 
+[features]
+perf = ["perf-core/perf"]
+
 [dependencies]
 syn = { version = "2.0", features = ["extra-traits", "full"] }
 quote = "1.0"
