--- a/perf/perf-core/Cargo.toml
+++ b/perf/perf-core/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 nix = { version = "0.29.0", features = ["time"] }
-lazy_static = "1.5.0"
 
 [lints.clippy]
 pedantic = "warn"
+
+[features]
+perf = []
